# advent-of-code

./: .gitignore  README.md
2017/day02/: Cargo.toml
2018/1/: 1.js  2.js
2018/10/: 1.js  2.js
2018/11/: 1.js  2.js
2018/12/: 1.js  2.js
2018/13/: 1.js  2.js
2018/14/: 1.js  2.js
2018/15/: 1.js  2.js
2018/16/: solution.py
2018/2/: 1.js  2.js
2018/3/: 1.js  2.js
2018/4/: 1.js  2.js
2018/5/: 1.js  2.js
2018/6/: 1.js  2.js
2018/7/: 1.js  2.js
2018/8/: 1.js  2.js
2018/9/: 1.js  2.js
2018/template/: solution.py
2019/: .gitignore  01.cpp  02.cpp  03.cpp
2020/01/: solution.py
2020/02/: solution.py
2020/03/: solution.py
2020/04/: solution.py
2020/05/: solution.py
2020/06/: solution.py
2020/07/: solution.py
2020/08/: solution.py
2020/09/: solution.py
2020/10/: solution.py
2020/11/: solution.py
2020/12/: solution.py
2020/13/: solution.py
2020/14/: solution.py
2020/15/: solution.py
2020/16/: solution.py
2020/17/: solution.py
2020/18/: solution.py
2020/19/: solution.py
2020/20/: solution.py
2020/21/: solution.py
2020/22/: solution.py
2020/23/: solution.py
2020/24/: solution.py
2020/25/: solution.py
2021/day15/: Cargo.toml
2021/day17/: Cargo.toml
2022/: Cargo.toml  flake.nix
2023/: Cargo.toml  fetch-input.sh  flake.nix
2024/: Cargo.toml  common  fetch-input.sh  shell.nix
2025/: Cargo.toml  fetch-input.sh  gen-day.sh  shell.nix
2025/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  main.rs
utils/: readTxt.js
(+121 files in other folders)
